welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:16: error: ')' expected but ';' found.
droite(); avance(); gauche(); avance(); 
        ^